--- a/index.css
+++ b/index.css
@@ -8,7 +8,17 @@
     display: flex;
     flex-direction: column;
     background-color:aqua;
+    padding: 5%;
+    margin: 5%;
+    align-content: center;
 }
+.container form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+}
+
 .container h2, h1, span{
     display: flex;
     width: 100%;
